; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_clipboard.c_DataObjectImpl_CreateText.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_clipboard.c_DataObjectImpl_CreateText.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GMEM_MOVEABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @DataObjectImpl_CreateText to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DataObjectImpl_CreateText(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @GMEM_MOVEABLE, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @strlen(i32 %7)
  %9 = add nsw i64 %8, 1
  %10 = call i32 @GlobalAlloc(i32 %6, i64 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @GlobalLock(i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @strcpy(i32 %12, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @GlobalUnlock(i32 %15)
  %17 = load i32, i32* %5, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @DataObjectImpl_CreateFromHGlobal(i32 %17, i32* %18)
  ret i32 %19
}

declare dso_local i32 @GlobalAlloc(i32, i64) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @strcpy(i32, i32) #1

declare dso_local i32 @GlobalLock(i32) #1

declare dso_local i32 @GlobalUnlock(i32) #1

declare dso_local i32 @DataObjectImpl_CreateFromHGlobal(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
